test/sema/negative/trait_impls3.impala
trait T {
   fn f(self: Self) -> i32;
}
impl T for bool {
   fn f(self: bool) -> bool { self }
}
